2000-10-31  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-insert-line): Work with quoted
	double-quote characters.
	(gnus-summary-prepare-threads): Ditto.

2000-10-22  Katsuhiro Hermit Endo <hermit@tomato.saino.ne.jp>

	* texi/gnus-ja.texi (Changing Servers): Fix typo.

2000-10-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-netbsd-get-headers): Fix regular
	expression to extract xover urls.

2000-10-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Fix regular
	expression to extract article body from `ZDNet'.

2000-10-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/imap.el: Require `base64' instead of to autoload it.

2000-10-05  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-xmas.el (gnus-xmas-group-startup-message): Don't use
	`gnus-point-at-eol'.
	* lisp/gnus.el (gnus-group-startup-message): Ditto.

2000-10-04  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/gnus-sum.el (gnus-build-sparse-threads): Use
	`make-full-mail-header-from-decoded-header' instead of
	`make-full-mail-header'.

2000-10-03  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-group.el (gnus-group-get-new-news): Update modeline
	using `gnus-agent-toggle-plugged' if agent is activated.
	* lisp/gnus-agent.el (gnus-group-get-new-news): Don't advise it,
	merge it into gnus-group.el instead.

	* lisp/gnus-offline.el (gnus-offline-after-jobs-done): Use `ding'
	with `play-sound-file' for XEmacs statically.

	* lisp/gnus-art.el (gnus-article-add-button): Quote
	`:button-keymap' for Mule 2.3 but it won't work.

	* lisp/dgnushack.el: (dgnushack-compile): Don't compile
	dgnushack.el nor lpath.el.

2000-09-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-ignored-supersedes-headers): Synch with
	Gnus.

2000-09-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.
