@@ -1,3 +1,12 @@
+2000-11-01  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/gnus-vers.el (gnus-revision-number): Increment to 06.
+
+	* lisp/gnus.el (gnus-product-variable-file-list): Check for
+	`emacs-version' in the file "cache" as well.
+	* lisp/gnus-start.el (gnus-product-read-variable-file-1): Make it
+	talkative.
+
 2000-10-31  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/gnus-sum.el (gnus-summary-insert-line): Work with quoted
